# app/Http/Controllers/DiscoverController.php
@@ -331,7 +331,10 @@ class DiscoverController extends Controller
             ),
             'privacy_routing_status' => $node['privacy_routing_status'] ?? null,
             'sdk_language' => $node['sdk_language'] ?? null,
-            'sdk_version' => $node['sdk_version'] ?? null,
+            'implementation_name' => $node['implementation_name'] ?? null,
+            'implementation_version' => $node['implementation_version'] ?? null,
+            'sdk_compatibility_version' => $node['sdk_compatibility_version'] ?? ($node['sdk_version'] ?? null),
+            'sdk_version' => $node['sdk_version'] ?? ($node['sdk_compatibility_version'] ?? null),
             'consumer_cosignature_ready' => (bool) ($node['consumer_cosignature_ready'] ?? false),
             'sdk_status' => $node['sdk_status'] ?? null,
             'sdk_baseline_version' => $node['sdk_baseline_version'] ?? null,
