# app/Http/Controllers/RegistryController.php
@@ -212,7 +212,10 @@ class RegistryController extends Controller
             'pricing_effective_from' => $node->pricing_effective_from?->toIso8601String(),
             'pricing_effective_until' => $node->pricing_effective_until?->toIso8601String(),
             'sdk_language' => $node->sdk_language,
-            'sdk_version' => $node->sdk_version,
+            'implementation_name' => $node->implementation_name,
+            'implementation_version' => $node->implementation_version,
+            'sdk_compatibility_version' => $node->effectiveSdkCompatibilityVersion(),
+            'sdk_version' => $node->effectiveSdkCompatibilityVersion(),
             'uptime_history' => $this->buildUptimeHistory($node),
             'latency_percentiles' => $this->buildLatencyPercentiles($node),
             'public_listing' => (bool) ($node->public_listing ?? false),
